--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <h1>Pets in Boston</h1>
+    <h1 id='title'>Pets in Boston</h1>
     <script src="app.js"></script>
 </body>
 </html>
