added bulma and card function

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Pets in Boston</title>
+    <link rel="stylesheet" href="https://www.jsdelivr.com/package/npm/bulma" />
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <h1 id='title'>Pets in Boston</h1>
-    <script src="app.js"></script>
+    <h1 id='title' class='title'>Pets in Boston</h1>
+    <script type="module" src="app.js"></script>
 </body>
 </html>
