added header in html

--- a/index.html
+++ b/index.html
@@ -16,8 +16,20 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<h1 id="title" class="title">Pets in Boston</h1>
-		<div id="gallery" class="columns is-multiline"></div>
+		<section class="hero is-dark">
+			<div class="hero-body">
+				<div class="container">
+					<h1 class="title">
+						Pets of Boston
+					</h1>
+					
+				</div>
+			</div>
+		</section>
+
+        <section id="gallery" class="columns is-multiline">
+
+        </section>
 		<script type="module" src="app.js"></script>
 	</body>
 </html>
