working on image size issue

--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"
 		/>
-		<script
-			defer
-			src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
-		></script>
+
 		<link rel="stylesheet" href="style.css" />
 	</head>
+
 	<body>
 		<section class="hero is-dark">
 			<div class="hero-body">
@@ -22,14 +20,16 @@
 					<h1 class="title">
 						Pets of Boston
 					</h1>
-					
 				</div>
 			</div>
 		</section>
 
-        <section id="gallery" class="columns is-multiline">
+		<section id="gallery" class="columns is-multiline"></section>
 
-        </section>
+		<script
+			defer
+			src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
+		></script>
 		<script type="module" src="app.js"></script>
 	</body>
 </html>
