removed column n multiline classes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			</div>
 		</section>
 
-		<section id="gallery" class="columns is-multiline"></section>
+		<section id="gallery" class=""></section>
 
 		<script
 			defer
